Improving java docs by providing additional info and small usage samples